force-app/main/default/objects/cgcloud__Fund_Product__c/cgcloud__Fund_Product__c.object-meta.xml
<CustomObject>
    <description>Junction Object for Funds and product. A Fund can be linked to one Brand or Category based on the Fund Template settings.</description>
    <label>Fund Product</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Fund Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>