force-app/main/default/objects/cgcloud__Fund_Product__c/fields/cgcloud__Criterion_3_Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Criterion_3_Product__c</fullName>
    <description>Associated Product Criterion 3.</description>
    <formula>cgcloud__Product__r.cgcloud__Criterion_3_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>