force-app/main/default/objects/cgcloud__Fund_Product__c/fields/cgcloud__Fund__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund__c</fullName>
    <description>Fund record associated with Product.</description>
    <label>Fund</label>
    <referenceTo>cgcloud__Fund__c</referenceTo>
    <relationshipLabel>Anchor Products</relationshipLabel>
    <relationshipName>Fund_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>