force-app/main/default/objects/cgcloud__Fund_Product__c/fields/cgcloud__Product_Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Category__c</fullName>
    <description>Associated Product Category.</description>
    <formula>TEXT(cgcloud__Product__r.cgcloud__Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>