force-app/main/default/objects/cgcloud__Fund_Product__c/fields/cgcloud__Product_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Code__c</fullName>
    <description>Associated Product Code.</description>
    <formula>cgcloud__Product__r.cgcloud__Consumer_Goods_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>