force-app/main/default/objects/cgcloud__Fund_Product__c/fields/cgcloud__Product_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Description__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp;  cgcloud__Product__c  &amp; &quot;/view&quot;,  cgcloud__Product__r.cgcloud__Description_1__c  )</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>