force-app/main/default/objects/cgcloud__Fund_Product__c/fields/cgcloud__Product_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Level__c</fullName>
    <description>Associated Product Level.</description>
    <formula>TEXT(cgcloud__Product__r.cgcloud__Product_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Level</label>
    <type>Text</type>
</CustomField>