force-app/main/default/objects/cgcloud__Fund_Product__c/fields/cgcloud__Product_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Name__c</fullName>
    <description>Associated Product Name.</description>
    <formula>cgcloud__Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>