force-app/main/default/objects/cgcloud__Fund_Product__c/validationRules/cgcloud__Validate_Anchor_Product_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Validate_Anchor_Product_Level</fullName>
    <active>true</active>
    <description>Selected Product - Product Level should match with Fund Template Anchor Product Level</description>
    <errorConditionFormula>AND(!$Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c , !ISBlank(TEXT(cgcloud__Fund__r.cgcloud__Fund_Template__r.cgcloud__Product_Anchor_Level__c)) ,
(TEXT( cgcloud__Product__r.cgcloud__Product_Level__c )&lt;&gt; TEXT( cgcloud__Fund__r.cgcloud__Fund_Template__r.cgcloud__Product_Anchor_Level__c )))</errorConditionFormula>
    <errorMessage>Product Level should match with Fund Template Product Anchor Level.</errorMessage>
</ValidationRule>