force-app/main/default/objects/cgcloud__Fund_Product__c/validationRules/cgcloud__Validate_Product_Fund_Time_Frame.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Validate_Product_Fund_Time_Frame</fullName>
    <active>true</active>
    <description>Fund Time Frame must be within Product Time Frame (Fund Date From - Fund Date Thru).</description>
    <errorConditionFormula>AND(!$Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c,
				OR(cgcloud__Fund__r.cgcloud__Valid_From__c &lt; cgcloud__Product__r.cgcloud__Fund_Valid_From__c, 
				cgcloud__Fund__r.cgcloud__Valid_Thru__c &gt; cgcloud__Product__r.cgcloud__Fund_Valid_Thru__c))</errorConditionFormula>
    <errorMessage>Fund Time Frame must be within Product Time Frame (Fund Date From - Fund Date Thru).</errorMessage>
</ValidationRule>